# clowder

./: CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md
.github/: pull_request_template.md
docs/: 00-vision.md  01-product-requirements.md  02-architecture.md  03-engagement-pipeline.md  04-safety-model.md  05-agent-model.md  06-data-model.md
examples/: engagement.example.yaml
projects/can-bus-workbench/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
projects/can-bus-workbench/docs/: architecture.md  decoder-strategy.md  hardware-notes.md  roadmap.md  safety.md  workflow.md
projects/can-bus-workbench/examples/: sample_vehicle.dbc
projects/can-bus-workbench/scripts/: setup_socketcan.sh
projects/can-bus-workbench/src/can_workbench/: __init__.py  candump.py  capture.py  cli.py  decode.py  llm.py  models.py  report.py
projects/can-bus-workbench/tests/: test_candump.py  test_report.py
schemas/: engagement.schema.json
